responsive design done

--- a/Grab/index.html
+++ b/Grab/index.html
@@ -9,14 +9,14 @@
   <title>Grab - Login</title>
 </head>
 <body>
-  <section class="container">
-    <div class="container-lay">
+  <div>
+    <section class="container">
     <div class="logo">
       <img src="./assets/logo-grab.svg" alt="Grab logo">
     </div>
 
     <div class="formulario">
-      <form action="">
+      <form action="#">
         <div class="input-group">
           <input type="email" name="login" id="login">
         </div>
@@ -31,9 +31,15 @@
       <span>problemas para entrar ?</span>
       <a href="#">clique aqui</a>
     </div>
-  </div>
   </section>
   <section class="image">
+    <img
+    src="./assets/undraw_interview_rmcf.svg"
+    width="900px"
+    height="100%"
+    alt="team"
+    />
   </section>
+</div>
 </body>
 </html>
