--- a/Grab/index.html
+++ b/Grab/index.html
@@ -18,10 +18,10 @@
     <div class="formulario">
       <form action="#">
         <div class="input-group">
-          <input type="email" name="login" id="login">
+          <input class="text" type="email" name="login" id="login">
         </div>
         <div class="input-group">
-          <input type="password" name="password" id="password">
+          <input class="password" type="password" name="password" id="password">
         </div>
         <button type="submit">Entrar</button>
       </form>
